# conpra

./: CMakeLists.txt  README.md  code_shortening_tips  fast_scan.cpp  main.cpp  submission_template
week_1/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  Relativity.cpp  Students.cpp  chess_tournament.cpp  watson.cpp
week_10/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemD.cpp  ProblemE.cpp  ProblemE_2.cpp  ProblemF.cpp
week_10/samples_10/azrieli/: 2.ans  2.in  test.in
week_10/samples_10/fragileletters/: test.in
week_10/samples_10/meteorite/: test.in
week_10/samples_10/surveillance/: test.in
week_11/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  ProblemB_ref.cpp  ProblemC.cpp  ProblemC_ref.cpp  ProblemD.cpp  ProblemE.cpp  ProblemE_ref.cpp  ProblemF.cpp  ProblemF_timeLimit.cpp
week_11/samples_11/catmongo/: test.in
week_11/samples_11/jandjs/: test.in
week_12/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemD.cpp  ProblemE.cpp
week_12/samples_12/swordfighting/: test.in
week_13/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  ProblemD.cpp  ProblemF.cpp  ProblemG.cpp  ProblemJ.cpp
week_13/samples_13/absurdprices/: 1.ans
week_13/samples_13/anindustrialspy/: 1.ans  1.in  test.in
week_13/samples_13/boxunion/: 1.in  test.in
week_13/samples_13/flowerytrails/: 1.in  test.in
week_13/samples_13/grachten/: 1.ans
week_13/samples_13/partytime/: 1.in  2.in
week_13/samples_13/redundancy/: 1.in
week_13/samples_13/rivaldice/: 1.ans  1.in
week_13/samples_13/seeingisbelieving/: 1.ans  1.in  1.seed
week_13/samples_13/templonianmaps/: 1.ans  1.in
week_2/: CMakeLists.txt  Cable_car.cpp  Diplomacy.cpp  Drawing_lots.cpp  Floyd_warshall.cpp  Marry_rich.cpp  Room_finding.cpp
week_3/: CMakeLists.txt  Candy_store.cpp  City_roads.cpp  Library_hell.cpp  Networking.cpp  Water_temple.cpp  problemC.cpp
week_4/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemD.cpp  ProblemE.cpp
week_5/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemC_Dinic.cpp  ProblemD.cpp
week_5/samples_05/finedining/: unitTest.in
week_5/samples_05/footballchampion/: unitTest.in
week_6/: CMakeLists.txt  Dummy_submission.cpp  Knight_tour_algorithm.cpp  ProblemA.cpp  ProblemA_2.cpp  ProblemB.cpp  ProblemB_2.cpp  ProblemD.cpp  ProblemG.cpp  Testing.cpp
week_6/samples_06/alarmclock/: unit_test.in
week_6/samples_06/muffinqueen/: unit_test.in
week_6/samples_06/queensproblem/: unitTest.in
week_6/samples_06/trapped/: unit_test.in
week_7/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemD.cpp  ProblemE.cpp
week_7/samples_07/customs/: unit_test.in
week_7/samples_07/soupdelivery/: unit_test.in
week_7/samples_07/streetlights/: unit_test.in
week_8/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemD.cpp  ProblemE.cpp  ProblemE_timelimit.cpp
week_8/samples_08/escapingtheparadox/: 1.in  test.in
week_8/samples_08/packingcases/: test.in
week_8/samples_08/poker/: test.in
week_9/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  ProblemC.cpp  ProblemD.cpp  ProblemE.cpp  ProblemE.java  ProblemF.cpp  ProblemF.java  ProblemG.cpp  ProblemG.py
week_9/samples_09/gameshow/: 1.ans  1.in
week_9/samples_09/softskills/: test.in
