cmake_minimum_required(VERSION 3.16)
project(conpra)

set(CMAKE_CXX_STANDARD 14)

add_executable(conpra main.cpp week_1/HelloWorld.cpp week_1/Students.cpp week_1/Relativity.cpp week_1/chess_tournament.cpp week_1/watson.cpp fast_scan.cpp week_2/Floyd_warshall.cpp week_2/Marry_rich.cpp week_2/Drawing_lots.cpp week_2/Cable_car.cpp week_2/Room_finding.cpp week_2/Diplomacy.cpp)