cmake_minimum_required(VERSION 3.16)
project(conpra)

set(CMAKE_CXX_STANDARD 14)

add_executable(conpra main.cpp week_1/HelloWorld.cpp week_1/Students.cpp week_1/Relativity.cpp week_1/chess_tournament.cpp week_1/watson.cpp fast_scan.cpp week_2/Floyd_warshall.cpp week_2/Marry_rich.cpp week_2/Drawing_lots.cpp week_2/Cable_car.cpp week_2/Room_finding.cpp week_2/Diplomacy.cpp week_3/Networking.cpp week_3/Library_hell.cpp week_3/City_roads.cpp week_3/problemC.cpp week_3/Candy_store.cpp week_3/Water_temple.cpp week_4/ProblemA.cpp week_4/ProblemB.cpp week_4/ProblemC.cpp week_4/ProblemD.cpp week_4/ProblemE.cpp week_5/ProblemA.cpp week_5/ProblemC.cpp week_5/ProblemB.cpp week_5/ProblemC_Dinic.cpp week_5/ProblemC_push_relabel.cpp week_5/ProblemD.cpp week_6/Testing.cpp week_6/ProblemA.cpp week_6/ProblemB.cpp week_6/ProblemD.cpp week_6/Knight_tour_algorithm.cpp week_6/ProblemG.cpp week_6/ProblemA_2.cpp week_6/Dummy_submission.cpp week_6/ProblemB_2.cpp week_7/ProblemA.cpp week_7/ProblemB.cpp week_7/ProblemD.cpp week_7/ProblemE.cpp week_7/ProblemC.cpp)