cmake_minimum_required(VERSION 3.16)




# we also add a executable
add_executable(week_10_ProblemA ProblemA.cpp)
add_executable(week_10_ProblemB ProblemB.cpp)
add_executable(week_10_ProblemC ProblemC.cpp)
add_executable(week_10_ProblemD ProblemD.cpp)
add_executable(week_10_ProblemE ProblemE.cpp)
add_executable(week_10_ProblemE_2 ProblemE_2.cpp)
add_executable(week_10_ProblemF ProblemF.cpp)