cmake_minimum_required(VERSION 3.16)




# we also add a executable
add_executable(week_11_ProblemA ProblemA.cpp)
add_executable(week_11_ProblemB ProblemB.cpp)
add_executable(week_11_ProblemB_ref ProblemB_ref.cpp)
add_executable(week_11_ProblemC ProblemC.cpp)
add_executable(week_11_ProblemC_ref ProblemC_ref.cpp)
add_executable(week_11_ProblemD ProblemD.cpp)
add_executable(week_11_ProblemE ProblemE.cpp)
add_executable(week_11_ProblemE_ref ProblemE_ref.cpp)
add_executable(week_11_ProblemF ProblemF.cpp)
add_executable(week_11_ProblemF_timeLimit ProblemF_timeLimit.cpp)