cmake_minimum_required(VERSION 3.16)




# we also add a executable
add_executable(week_13_ProblemA ProblemA.cpp)
add_executable(week_13_ProblemB ProblemB.cpp)
add_executable(week_13_ProblemC ProblemC.cpp)
add_executable(week_13_ProblemD ProblemD.cpp)
add_executable(week_13_ProblemE ProblemE.cpp)
add_executable(week_13_ProblemF ProblemF.cpp)
add_executable(week_13_ProblemG ProblemG.cpp)
add_executable(week_13_ProblemH ProblemH.cpp)
add_executable(week_13_ProblemI ProblemI.cpp)
add_executable(week_13_ProblemJ ProblemJ.cpp)