cmake_minimum_required(VERSION 3.16)




# we also add a executable
add_executable(week_9_ProblemA ProblemA.cpp)
add_executable(week_9_ProblemB ProblemB.cpp)
add_executable(week_9_ProblemC ProblemC.cpp)
add_executable(week_9_ProblemD ProblemD.cpp)
add_executable(week_9_ProblemE ProblemE.cpp)
add_executable(week_9_ProblemF ProblemF.cpp)
add_executable(week_9_ProblemG ProblemG.cpp)